fluxcd/infrastructure/configs/overlays/production/istio-policies/optcp-network-services/allow-ntp-loadbalancer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ntp-loadbalancer
spec:
  selector:
    matchLabels:
      app: chrony
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - "10.0.0.0/8"
              - "172.16.0.0/12"
              - "192.168.0.0/16"
      to:
        - operation:
            ports: ["123", "8080"]
